--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,28 @@
 /* You can add global styles to this file, and also import other style files */
+
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.vertical-margin {
+  margin-top: 16px;
+  margin-bottom: 16px;
+}
+
+.right {
+  text-align: right;
+}
+
+.unit {
+  vertical-align: super;
+}
+
+.flex-spacer {
+  flex: 1 1 auto;
+}
